# src/controllers/UserController.js
@@ -1,5 +1,5 @@
 const User = require('../models/User')
-
+const UserAddress = require('../models/UserAddress')
 class UserController {
 
     async signUp(req, res) {
@@ -30,10 +30,33 @@ class UserController {
                 email,
                 password
             })
-            res.status(201).json(newUser)
+
+            const UserAddressData = {
+                streetName: req.body.address.streetName,  // nome da rua
+                number: req.body.address.number, // numero
+                complement: req.body.address.complement,
+                area: req.body.address.area, // bairro
+                city: req.body.address.city, // cidade
+                state: req.body.address.state, // estado
+                country: req.body.address.country, // pais
+                areaCode: req.body.address.areaCode, // CEP
+                userId: newUser.id
+            }
+
+            const newAddress = await UserAddress.create(UserAddressData)
+
+            res.status(201).json({ message: "Usuário criado com sucesso" })
+
+
 
         } catch (error) {
             console.log(error)
+            if (error.name == 'SequelizeUniqueConstraintError') {
+                return res.status(400).json({ message: "Email ou cpf já cadastrado." })
+            }
+            if (error.name == 'SequelizeDatabaseError') {
+                return res.status(400).json({ error: error.message })
+            }
             res.status(500).json({ message: "Não foi possível cadastrar o usuário." })
         }
 
